--- a/AtividadesReactDSN-17-10-2024/AtividadeReact/src/App.css
+++ b/AtividadesReactDSN-17-10-2024/AtividadeReact/src/App.css
@@ -7,6 +7,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  margin: 22px;
+  gap: 2vh;
 }
 .balaco{
   margin: 90px;
@@ -24,4 +27,13 @@ button{
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+}
+.copiaInsta{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 22px;
+  gap: 5vh;
+  flex-direction: column;
 }
