--- a/AtividadeComAPI/frontend/src/App.css
+++ b/AtividadeComAPI/frontend/src/App.css
@@ -10,3 +10,10 @@
   justify-content: center;
   flex-direction: column;
 }
+.card{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
