--- a/AtividadeComAPI/frontend/src/index.css
+++ b/AtividadeComAPI/frontend/src/index.css
@@ -1,6 +1,3 @@
-.card{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
